@@ -113,7 +113,7 @@ public class JsonUserDatasetSession implements UserDatasetSession {
       for (Path sharedWithPath : sharedWithPaths) {
         String userIdString = sharedWithPath.getFileName().toString();
         Long timestamp = adaptor.getModificationTime(sharedWithPath);
-        sharedWithItems.add(new JsonUserDatasetShare(new Long(userIdString), timestamp));
+        sharedWithItems.add(new JsonUserDatasetShare(Long.valueOf(userIdString), timestamp));
       }
       user.sharedWithUsers.put(datasetId, sharedWithItems);
     }
@@ -250,8 +250,8 @@ public class JsonUserDatasetSession implements UserDatasetSession {
       if (words.length != 2)
         throw new WdkModelException("Illegal external dataset link: " + linkName);
       try {
-        externalUserId = new Long(words[0]);
-        datasetId = new Long(words[1]);
+        externalUserId = Long.valueOf(words[0]);
+        datasetId = Long.valueOf(words[1]);
       }
       catch (NumberFormatException e) {
         throw new WdkModelException("Illegal external dataset link: " + linkName);
@@ -614,7 +614,7 @@ public class JsonUserDatasetSession implements UserDatasetSession {
         String line = adaptor.readSingleLineFile(userQuotaFile);
         if (line == null)
           throw new WdkModelException("Empty quota file " + userQuotaFile);
-        user.quota = new Long(line.trim());
+        user.quota = Long.valueOf(line.trim());
       } else user.quota = getDefaultQuota();
     }
     return user.quota;
@@ -627,7 +627,7 @@ public class JsonUserDatasetSession implements UserDatasetSession {
       String line = adaptor.readSingleLineFile(quotaFile);
       if (line == null)
         throw new WdkModelException("Empty quota file " + quotaFile);
-      defaultQuota = new Long(line.trim());
+      defaultQuota = Long.valueOf(line.trim());
     }
     return defaultQuota;
   }
@@ -639,7 +639,7 @@ public class JsonUserDatasetSession implements UserDatasetSession {
         String line = adaptor.readSingleLineFile(quotaFile);
         if (line == null)
           throw new WdkModelException("Empty quota file " + quotaFile);
-        defaultQuota = new Long(line.trim());
+        defaultQuota = Long.valueOf(line.trim());
       }
       return defaultQuota;
   }
